--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
+    "axios": "^1.3.3",
+    "calendar-dates": "^2.7.2",
+    "flatpickr": "^4.6.13",
+    "handlebars": "^4.7.7",
+    "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "modern-normalize": "^1.1.0"
   },
   "devDependencies": {
