--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "handlebars": "^4.7.7",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
-    "modern-normalize": "^1.1.0"
+    "modern-normalize": "^1.1.0",
+    "notiflix": "^3.2.6"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
+    "buffer": "^6.0.3",
     "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4"
