--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
+    "@swc/helpers": "^0.4.14",
     "axios": "^1.3.3",
     "calendar-dates": "^2.7.2",
     "flatpickr": "^4.6.13",
