install regenerator-runtime

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
     "modern-normalize": "^1.1.0",
-    "notiflix": "^3.2.6"
+    "notiflix": "^3.2.6",
+    "regenerator-runtime": "^0.13.11"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
