--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@swc/helpers": "^0.4.14",
     "axios": "^1.3.3",
     "calendar-dates": "^2.7.2",
+    "firebase": "^9.17.1",
     "flatpickr": "^4.6.13",
     "handlebars": "^4.7.7",
     "lodash.debounce": "^4.0.8",
@@ -34,7 +35,8 @@
     "buffer": "^6.0.3",
     "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
-    "posthtml-include": "^1.7.4"
+    "posthtml-include": "^1.7.4",
+    "process": "^0.11.10"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead"
 }
